# IwaraTV

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
docs/: user-manual.en.md  user-manual.zh-CN.md
scripts/: generate-icons.mjs  install-mpv.mjs  package-portable-win.mjs  update-version.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  commands.rs  downloads.rs  error.rs  favorites.rs  iwara_client.rs  iwara_utils.rs  lib.rs  main.rs  media_speed.rs  models.rs  player.rs  player_template.rs  session.rs  settings.rs  state.rs
src/lib/: types.ts
src/main/: ipc.ts  main.ts  preload.ts
src/main/services/: auth-store.ts  iwara-client.ts  iwara-session.ts  player-service.ts  settings-store.ts
src/renderer/: App.tsx  global.d.ts  issue-utils.ts  main.tsx  styles.css  tauri-bridge.ts
src/shared/: iwara-utils.ts  media-speed-utils.ts  player-utils.ts  types.ts
src/tauri/: api.ts  global.d.ts
tests/: issue-utils.test.ts  iwara-client.test.ts  iwara-utils.test.ts  media-speed-utils.test.ts  player-utils.test.ts  tauri-api.test.ts  tauri-boundary.test.ts  tauri-bridge.test.ts
